<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color="#1AFFFFFF">

    <View
        android:id="@+id/saved_recs"
        android:layout_width="286dp"
        android:layout_height="312dp"
        android:background="@drawable/saved_recs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:color="#1AFFFFFF" />

    <TextView
        android:id="@+id/calcTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="274dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/calcTitle"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <EditText
        android:id="@+id/editTextGivenSurface"
        android:layout_width="229dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="242dp"
        android:hint="@string/surfaceValue"
        android:textSize="12sp"
        android:textColor="#323232"
        android:background="@drawable/save_etrecname"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:fontFamily="@font/lato_medium"
        android:autofillHints=""
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <TextView
        android:id="@+id/calcTextViewHowAbsorb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="215dp"
        android:text="@string/howAbs"
        android:textAlignment="center"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="229dp"
        android:layout_height="24dp"

        android:layout_weight=".28"
        android:background="@drawable/save_etrecname"
        android:orientation="horizontal"
        android:layout_marginStart="29dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs">

        <Spinner
            android:id="@+id/calcSpinner"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"

            android:fontFamily="@font/lato_medium"
            android:textColor="#323232"
            android:textSize="12sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/calcTextViewNumbOfLayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="161dp"
        android:text="@string/numbOfLay"
        android:textAlignment="center"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="134dp"
        android:padding="4dp"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="12sp"
        android:textAlignment="center"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <TextView
        android:id="@+id/calcTextViewLayers"
        android:layout_width="193dp"
        android:layout_height="24dp"
        android:fontFamily="@font/lato_medium"
        android:background="#FFFFFF"
        android:text="1"
        android:textAlignment="center"
        android:textColor="#323232"
        android:padding="1dp"
        android:textSize="13sp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="134dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="13sp"
        android:textAlignment="center"
        android:padding="4dp"
        android:text="+"
        android:layout_marginStart="240dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="134dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <TextView
        android:id="@+id/calcTextViewPaintEff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="106dp"
        android:text="@string/paintEff"
        android:textAlignment="textStart"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <EditText
        android:id="@+id/editTextPaintEff"
        android:layout_width="229dp"
        android:layout_height="24dp"
        android:hint="@string/m2l"
        android:textSize="12sp"
        android:textColor="#323232"
        android:background="@drawable/save_etrecname"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:fontFamily="@font/lato_medium"
        android:autofillHints=""
        android:paddingStart="5dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="79dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <TextView
        android:id="@+id/respond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="51dp"
        android:text="@string/respondString"
        android:textAlignment="textStart"
        android:fontFamily="@font/lato_medium"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <Button
        android:id="@+id/buttonCalculatorExit"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_medium"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:text="@string/calculatorExit"
        android:textColor="#323232"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <Button
        android:id="@+id/buttonCalculator"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_medium"
        android:paddingTop="5dp"
        android:paddingBottom="6dp"
        android:text="@string/calculate"
        android:textColor="#323232"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />
</androidx.constraintlayout.widget.ConstraintLayout>